--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,8 @@
-certifi==2018.11.29
-chardet==3.0.4
-idna==2.8
-mysqlclient==1.4.2.post1
-numpy==1.16.2
-pandas==0.24.1
+boto3==1.9.106
+botocore==1.12.106
+docutils==0.14
+jmespath==0.9.4
 python-dateutil==2.8.0
-pytz==2018.9
-requests==2.21.0
-scikit-learn==0.20.2
-scipy==1.2.1
+s3transfer==0.2.0
 six==1.12.0
 urllib3==1.24.1
