--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-boto3==1.9.106
-botocore==1.12.106
-docutils==0.14
-jmespath==0.9.4
+cycler==0.10.0
+kiwisolver==1.0.1
+matplotlib==3.0.3
+numpy==1.16.2
+pandas==0.24.1
+pyparsing==2.3.1
 python-dateutil==2.8.0
-s3transfer==0.2.0
+pytz==2018.9
+scikit-learn==0.20.3
+scipy==1.2.1
 six==1.12.0
-urllib3==1.24.1
+tqdm==4.31.1
