--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
+branca==0.3.1
+certifi==2018.11.29
+chardet==3.0.4
 cycler==0.10.0
+folium==0.8.2
+idna==2.8
+Jinja2==2.10
 kiwisolver==1.0.1
+MarkupSafe==1.1.1
 matplotlib==3.0.3
+mysqlclient==1.4.2.post1
 numpy==1.16.2
 pandas==0.24.1
 pyparsing==2.3.1
 python-dateutil==2.8.0
 pytz==2018.9
+requests==2.21.0
 scikit-learn==0.20.3
 scipy==1.2.1
 six==1.12.0
 tqdm==4.31.1
+urllib3==1.24.1
